SERVER-48783 Critical section should not be entered when performing a shard version recovery